--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,33 @@ header > a:hover {
   text-decoration: underline;
 }
 
-section {
+h1 {
+  text-align: center;
+  margin-top: 0;
+}
+
+.container {
+  max-width: 900px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin: 0 auto;
+}
+
+main {
   min-height: calc(100vh - 85px - 22px);
-  padding: 1.5rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+main a {
+  text-decoration: none;
+  color: var(--color-bg);
+}
+main a:hover {
+  text-decoration: underline;
+}
+
+.active {
+  color: var(--color-active);
+  cursor: default;
 }
