--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@ main a:hover {
   text-decoration: underline;
 }
 
-.active {
+.active-link {
   color: var(--color-active);
   cursor: default;
 }
